--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^10.12.3",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "mailgun.js": "^9.4.1",
